// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`INPUTUI SNAPSHOTS TESTS type="comment" InputUI should not be changed 1`] = `
<div
  class="container container_comment container_focus"
  data-testid="input"
>
  <div
    class="container__placeholder"
  >
    comment
  </div>
  <input
    class="container__input"
    type="text"
    value="value"
  />
  <img
    alt="close"
    class="container__icon"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</div>
`;

exports[`INPUTUI SNAPSHOTS TESTS type="email" InputUI should not be changed 1`] = `
<div
  class="container container_email container_focus"
  data-testid="input"
>
  <div
    class="container__placeholder"
  >
    email
  </div>
  <input
    class="container__input"
    type="email"
    value="value"
  />
  <img
    alt="user"
    class="container__icon"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</div>
`;

exports[`INPUTUI SNAPSHOTS TESTS type="password" InputUI should not be changed 1`] = `
<div
  class="container container_password container_focus"
  data-testid="input"
>
  <div
    class="container__placeholder"
  >
    password
  </div>
  <input
    class="container__input"
    type="password"
    value="value"
  />
  <img
    alt=""
    class="container__icon container__icon_eye"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</div>
`;

exports[`INPUTUI SNAPSHOTS TESTS type="search" InputUI should not be changed 1`] = `
<div
  class="container container_search container_focus"
  data-testid="input"
>
  <div
    class="container__placeholder"
  >
    search
  </div>
  <input
    class="container__input"
    type="search"
    value="value"
  />
  <img
    alt="close"
    class="container__icon"
    data-nimg="1"
    decoding="async"
    height="40"
    loading="lazy"
    src="/_next/image?url=%2Fimg.jpg&w=96&q=75"
    srcset="/_next/image?url=%2Fimg.jpg&w=48&q=75 1x, /_next/image?url=%2Fimg.jpg&w=96&q=75 2x"
    style="color: transparent;"
    width="40"
  />
</div>
`;
